* 2012-07-18 - thorben.betten@open-xchange.com

 - Fix for bug 22582: Proper "filename" parameter in "Content-Disposition" header
 - Fix for bug 22537: Removed line breaks

* 2012-07-17 - thorben.betten@open-xchange.com

 - Fix for bug 22548: Handle special "No content" I/O error thrown by JavaMail if IMAP session is in an inconsistent state
 - Fix for bug 22584: Stick to JavaMail's Multipart implementation

* 2012-07-16 - marcus.klein@open-xchange.com

 - Fix for bug 22563: Restored previous java runtime dependencies that selects a supported JVM on each RPM distribution.

* 2012-07-16 - thorben.betten@open-xchange.com

 - Fix for bug 22564: Ignore possibly wrong message reference on reply
 - Fix for bug 22551: Don't consider module when checking for duplicate folder

* 2012-07-12 - jan.bauerdick@open-xchange.com

 - New service to store/retrieve sessions
 - Enhanced c.o.sessiond to use SessionStorageService

* 2012-07-11 - thorben.betten@open-xchange.com

 - Fix for bug 22501: Removed wrong '$' sign in printf-style string

* 2012-07-10 - thorben.betten@open-xchange.com

 - Fix for bug 15326: Special handling for "transaction roll-back error" and responding with try-again error code TSK-0054
 - Fix for bug 22099: Special handling for "transaction roll-back error" and responding with try-again error code APP-0108
 - Fix for bug 22491: Dropped annoying System.out.println() invocations
 - Fix for bug 22487: Re-initialize SessionPOP3StorageUIDLMap if timer elapsed in the meantime
 - Fix for bug 22467: Fixed possible NPE in AbstractPerformer class

* 2012-07-09 - choeger@open-xchange.com

 - Bugfix #22482: [L3] reporter throws unneeded messages to stderr
 
* 2012-07-06 - thorben.betten@open-xchange.com

 - Fix for bug 22489: Dealing with failed auto-save

* 2012-07-05 - thorben.betten@open-xchange.com

 - Fix for bug 22473: Fixed own rights for INBOX folder

* 2012-07-04 - thorben.betten@open-xchange.com
