@@ -53,7 +53,6 @@
         <chmod perm="755" file="${sbinInstallDir}/listExecutedUpdateTasks"/>
         <chmod perm="755" file="${sbinInstallDir}/logincounter"/>
         <chmod perm="755" file="${sbinInstallDir}/open-xchange"/>
-        <chmod perm="755" file="${sbinInstallDir}/oxreport"/>
         <chmod perm="755" file="${sbinInstallDir}/restoregabdefaults"/>
         <chmod perm="755" file="${sbinInstallDir}/runupdate"/>
 
