@@ -1,3 +1,7 @@
+* 2012-07-18 - marcus.klein@open-xchange.com
+
+ - PT 32897389: Removed outdated oxreport CLT
+
 * 2012-07-18 - thorben.betten@open-xchange.com
 
  - Fix for bug 22582: Proper "filename" parameter in "Content-Disposition" header
